--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 
-
+<!DOCTYPE html>
 <html>
     <head>
         <title>Willkommen!</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <meta charset="utf-8">
     </head>
 
     <body>
