--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Willkommen!</title>
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
+        <link rel="icon" type="image/png" href="assets/favicon.png">
     </head>
 
     <body>
