--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
         }
 
         if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-            document.body.classList.toggle("dark-mode")
+            
+            document.body.classList.toggle("dark-mode-no-transition");
+            document.body.classList.toggle("dark-mode");
+            setTimeout(function () {
+                document.body.classList.toggle("dark-mode-no-transition");
+            }, 1000);
+
         }
 
         setTimeout(function () {
