--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
         <link rel="icon" type="image/png" href="assets/favicon.png">
+        <meta http-equiv='cache-control' content='no-cache'> 
+        <meta http-equiv='expires' content='0'> 
+        <meta http-equiv='pragma' content='no-cache'>
     </head>
 
     <body>
@@ -26,7 +29,7 @@
                 <a href="https://www.discord.com/users/1140907951368974336" target="_blank" id = "ic3" class="invisible"><img src="assets/discord.png"></a>
                 <a href="https://twitter.com/SpacedOutDev" target="_blank" id = "ic4" class="invisible"><img src="assets/twitter.png"></a>
             </div>
-
+            <h1 id="buildID">Build 001</h1>
             <div id="bottomCircleDiv">
                 <span class="circle" onclick="toggleDarkMode()"></span>
             </div>
