Hover on iphone fix

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
 
             <div id="iconDiv">            
-                <a href="https://github.com/SpacedOutDev" target="_blank" id = "ic1" class="invisible"><img src="assets/github.png"></a>
-                <a href="mailto:kilian_public@yahoo.com" target="_blank" id = "ic2" class="invisible"><img src="assets/email.png"></a>
-                <a href="https://www.discord.com/users/1140907951368974336" target="_blank" id = "ic3" class="invisible"><img src="assets/discord.png"></a>
-                <a href="https://twitter.com/SpacedOutDev" target="_blank" id = "ic4" class="invisible"><img src="assets/twitter.png"></a>
+                <a href="https://github.com/SpacedOutDev" target="_blank" id = "ic1" class="invisible"><img src="assets/github.png" onclick=""></a>
+                <a href="mailto:kilian_public@yahoo.com" target="_blank" id = "ic2" class="invisible"><img src="assets/email.png" onclick=""></a>
+                <a href="https://www.discord.com/users/1140907951368974336" target="_blank" id = "ic3" class="invisible"><img src="assets/discord.png" onclick=""></a>
+                <a href="https://twitter.com/SpacedOutDev" target="_blank" id = "ic4" class="invisible"><img src="assets/twitter.png" onclick=""></a>
             </div>
             <h1 id="buildID">Build 002</h1>
             <div id="bottomCircleDiv">
